# flowwalker-artifact

./: .clang-format  CMakeLists.txt  README.md
data/: EdgeListToCSR.cpp  README.md  get_dataset.sh  wiki-Vote.edgelist
include/: app.cuh  gpu_graph.cuh  gpu_queue.cuh  gpu_task.cuh  graph.cuh  myrand.cuh  sampler.cuh  util.cuh  walker.cuh
lint/: Makefile  cpplint.py  format.sh
src/: main.cu  sampler_test.cu  util.cu  walk.cu
